# PASSWORD_MANAGER_C

./: .gitignore  CMakeLists.txt  README.md  TODO.org
src/: base64.c  base64.h  database.c  database.h  defines.h  encryption.c  encryption.h  main.c  tests.c  tests.h  utils.c  utils.h
